# Osu-Sync

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-compile-cli.yml  cmake-compile-gui.yml  cmake-multi-platform.yml  msvc.yml
CompressionUtility/: CMakeLists.txt  CompressionUtility.cpp  CompressionUtility.h
OsuPathUtility/: CMakeLists.txt  OsuPathUtility.cpp  OsuPathUtility.h
OsuSyncEngine/: CMakeLists.txt  OsuSyncEngine.h
OsuSync_CLI/: CMakeLists.txt  main.cpp
OsuSync_GUI/: CMakeLists.txt  main.cpp
OsuSync_Resources/: OsuSync.rc
bit7z/: CMakeLists.txt
